# haskell-terminal

./: .gitignore  README.md  terminal.cabal
data/: colors.sh  init.sh
src/: Main.hs  ShaderUtils.hs
src/Hsterm/: Config.hs  Hsterm.hs  Main.hs  ShaderUtils.hs  State.hs  Theme.hs
src/Hstermplay/: Main.hs
src/Terminal/: Debug.hs  Parser.hs  ParserUtils.hs  Terminal.hs  Test.hs  Types.hs
tests/: Main.hs
tests/parser/: Main.hs
tests/terminal/: Main.hs
themes/default/: background.frag  cursor.frag  cursor.vert
