Name: Terminal
Version: 0.0.2
Description: Haskell terminal emulator
License: GPL
License-file: LICENSE
Author: Hannes Gräuler
Maintainer: hgraeule@uos.de
Build-Type: Simple
Cabal-Version: >=1.2
Extra-source-files: README.md
Data-Files: data/*.ttf data/*.sh

Executable hsterm
  Main-is: Main.hs
  Hs-Source-Dirs: src/Hsterm, src
  Extensions: CPP
  Build-Depends: base >= 3 && < 5, containers, mtl, stm, random, array
  Build-Depends: time, GLUT, OpenGLRaw, GLURaw, OpenGL, parsec, unix, process
  Build-Depends: FTGL >= 1.333
  GHC-Options: -O

Executable hstermplay
  Main-is: Main.hs
  Hs-Source-Dirs: src/Hstermplay, src
  Extensions: CPP
  Build-Depends: base >= 3 && < 5, containers, mtl, stm, random, array
  Build-Depends: time, parsec, unix, process

test-suite TerminalTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4 && < 5,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   HUnit,
                   test-framework-hunit
  hs-source-dirs:  tests/terminal, src
  main-is:         Main.hs

test-suite ParserTests
  type:            exitcode-stdio-1.0
  x-uses-tf:       true
  build-depends:   
                   base >= 4 && < 5,
                   QuickCheck >= 2.4,
                   test-framework >= 0.4.1,
                   test-framework-quickcheck2,
                   HUnit,
                   test-framework-hunit
  hs-source-dirs:  tests/parser, src
  main-is:         Main.hs
